Added large records image and lot more
Br is space , will b is bold.

--- a/text1.html
+++ b/text1.html
@@ -1,3 +1,14 @@
-<hi>Hey. I'm a big Heading </hi>
-<p>hEY I'M A <b>PARAGRAPH </b> elelemnet. cool huh?</p>
-<a href="https://google.com" target="_blank" Let's go to google>cLICK ME! I'm a link</a>
+<!DOCTYPE HTML>
+<html>
+<head>
+	<title>large Records</title>
+</head>
+<body>
+	<hi>WELCOME TO LARGE RECORDS & ENTERTAINMENT  </hi>
+	<p>HEY I'M A <b>PARAGRAPH </b> elelemnet. cool huh?</p>
+	<a href="https://google.com" target="_blank"title="let's go to Google">CLICK ME! I'm a link</a>
+	<p>The CEO <br> Of Large Records</p>
+	<img src="img/fem.jpeg">
+	
+</body>
+</html> 
